@@ -1,23 +1,23 @@
 {
-  "timestamp" : "2022-05-17T08:16:27Z",
+  "timestamp" : "2022-05-18T00:49:18Z",
   "count_outdated" : 267,
   "uniques_outdated" : 133,
-  "count" : 307,
+  "count" : 308,
   "uniques" : 160,
   "clones" : [
     {
       "timestamp": "2022-05-04T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 2,
-      "uniques_minmax": [ 0, 2 ]
+      "uniques_minmax": [ 2, 2 ]
     },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -29,23 +29,23 @@
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 9,
-      "count_minmax": [ 0, 9 ],
+      "count_minmax": [ 9, 9 ],
       "uniques": 6,
-      "uniques_minmax": [ 0, 6 ]
+      "uniques_minmax": [ 6, 6 ]
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
@@ -57,23 +57,23 @@
     {
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 3,
-      "count_minmax": [ 0, 3 ],
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-15T00:00:00Z",
@@ -85,14 +85,14 @@
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
