@@ -1,5 +1,5 @@
 {
-  "count": 40,
+  "count": 41,
   "uniques": 14,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
