@@ -1,3 +1,10 @@
+2022-05-18T00:49:18Z:
+* notice: last 14d: all unq: 41 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 267 133 / 307 160
+* notice: next accum: outdated-all outdated-unq / all unq: 267 133 / 308 160
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: changed dates: [2022-05-17]
+
 2022-05-17T08:16:27Z:
 * notice: last 14d: all unq: 40 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 267 133 / 305 158
